--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV["REDISCLOUD_URL"] %>
+  url: redis://rediscloud:N9f98T9SzN1mIadL@redis-18363.c10.us-east-1-3.ec2.cloud.redislabs.com:18363
   channel_prefix: DevcampPortfolio_production
